[gd_scene load_steps=2 format=3 uid="uid://byxjne0u603td"]

[ext_resource type="Script" uid="uid://dtxvhlmeph63x" path="res://scripts/main.gd" id="1_o5qli"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o5qli")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="s" type="MarginContainer" parent="CanvasLayer"]
layout_direction = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -87.5
offset_right = 35.0
offset_bottom = 87.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.03465)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/s"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Play" type="Button" parent="CanvasLayer/s/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Leaderboard" type="Button" parent="CanvasLayer/s/VBoxContainer"]
layout_mode = 2
text = "Leaderboard
"

[node name="Skins" type="Button" parent="CanvasLayer/s/VBoxContainer"]
layout_mode = 2
text = "Skins
"

[node name="Tutorial" type="Button" parent="CanvasLayer/s/VBoxContainer"]
visible = false
layout_mode = 2
text = "Tutorial"

[node name="Options" type="Button" parent="CanvasLayer/s/VBoxContainer"]
visible = false
layout_mode = 2
text = "Options
"

[node name="Exit" type="Button" parent="CanvasLayer/s/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="CanvasLayer/s/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/s/VBoxContainer/Leaderboard" to="." method="_on_leaderboard_pressed"]
[connection signal="pressed" from="CanvasLayer/s/VBoxContainer/Skins" to="." method="_on_skins_pressed"]
[connection signal="pressed" from="CanvasLayer/s/VBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="CanvasLayer/s/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="CanvasLayer/s/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
